2009-08-12  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 0.107.0

	* NEWS: update.

	* src/factory.c (main): Add a --no-logfile option for testing.

	* utils/imsettings-list.c (main): don't restart the daemon
	automatically.

	* utils/imsettings-stop.c (main): likewise.

	* utils/imsettings-start.c (main): likewise.

	* utils/imsettings-restart.c (main): likewise.

	* src/factory.c (_notify): notify an error through libnotify.
	(imsettings_manager_real_stop_im): ignore an error to stop the aux
	process if IM doesn't use it.
	(imsettings_manager_real_stop_im): ignore an error to stop the xim
	process if IM is immodule only.

2009-08-11  Akira TAGOH  <tagoh@redhat.com>

	* data/xinput.sh.in.in: initialize the log file.

	* src/factory.c (_process_info_new): Add a reference counter.
	(_process_info_ref): new.
	(_process_info_unref): new.
	(_process_info_dup, _process_info_free): removed.
	(_output_log): new.
	(_log_handler): new.
	(_logger_write_cb): new.
	(_watch_im_status_cb): deal with the status properly.
	(_start_process): logging the stdout and the stderr from IM.

2009-08-10  Akira TAGOH  <tagoh@redhat.com>

	* tests/rhbz_455363.c (test_issue): Fix a typo.

	* src/monitor.c (imsettings_monitor_real_changed_xinputrc): 
	Fix unnecessary object creation.
	(imsettings_monitor_real_changed_xinputrc): reset is_system_default
	flag in the deletion. (rhbz#514852)
	(imsettings_monitor_real_changed_dot_xinputrc): Fix unnecessary
	object creation.

	* src/factory.c (_process_info_new): new
	(_process_info_dup): new.
	(_process_info_free): new.
	(_get_process_info_by_module): new.
	(_get_process_info_by_id): new.
	(_get_pid_from_name): new.
	(_watch_im_status_cb): new.
	(_stop_all_processes): new.
	(_start_process): manage the child process without the pid file.
	(_stop_process): likewise.
	(reload_cb): restart monitoring files too.
	(imsettings_manager_real_dispose): stop all of the child processes.
	(_sig_handler): new.
	(main): set a signal handlers.
